syntax = "proto3";
package tekone.app.warehouse.tm_service.api;
option go_package = "go.tekoapis.com/tekone/app/warehouse/tm_service/api";
import "validate/validate.proto";
import "google/api/annotations.proto";
import "tekone/app/warehouse/tm_service/api/data.proto";
//-------------------------end generated header---------------------------//

// TmService
service TmService {
  rpc CreateTicket(CreateTicketRequest) returns (CreateTicketResponse) {
    option (google.api.http) = {
      get : "/api/v1/tm/create-ticket"
    };
  }
  rpc UpdateTicketStatus(UpdateTicketStatusRequest)
      returns (UpdateTicketStatusResponse) {
    option (google.api.http) = {
      get : "/api/v1/tm/update-ticket-status"
    };
  }
  rpc GetTicketById(GetTicketByIdRequest) returns (Ticket) {
    option (google.api.http) = {
      get : "/api/v1/tm/get-ticket"
    };
  }
}

message Ticket {
  string ticket_id = 1;
  string user_id = 2;
  string title = 3;
  string content = 4;
  string priority = 5;
  string status = 6;
}

message GetTicketByIdRequest { string ticket_id = 1; }

message CreateTicketRequest {
  string user_id = 1;
  string title = 2;
  string content = 3;
  string priority = 4;
}

message CreateTicketResponse {
  string message = 1;
  string ticket_id = 2;
}

message UpdateTicketStatusRequest {
  string ticket_id = 1;
  string status = 2;
}

message UpdateTicketStatusResponse { string message = 1; }
